--- a/raddb/clients.conf
+++ b/raddb/clients.conf
@@ -39,11 +39,11 @@ client localhost {
 	#
 	#  If both A and AAAA records are found, A records will be
 	#  used in preference to AAAA.
-	ipaddr = 127.0.0.1
+#	ipaddr = 127.0.0.1
 
 	#  Same as ipaddr but allows v4 addresses only. Requires A
 	#  record for domain names.
-#	ipv4addr = *	# any.  127.0.0.1 == localhost
+	ipv4addr = *	# any.  127.0.0.1 == localhost
 
 	#  Same as ipaddr but allows v6 addresses only. Requires AAAA
 	#  record for domain names.
